Update the model.

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -100,6 +100,29 @@
     "df = pd.read_csv('submission.csv')\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_acc': tensor(0.9857), 'val_acc': tensor(0.8000)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from baseline import inference_wrapper\n",
+    "import torch\n",
+    "import torch_geometric.utils as pyg_utils\n",
+    "\n",
+    "aug_data = torch.load(\"data\\data_augmented.pt\")\n",
+    "result = inference_wrapper(aug_data, \"model.pt\")\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
