update some scripts for training.

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -123,6 +123,26 @@
     "result = inference_wrapper(aug_data, \"model.pt\")\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import os\n",
+    "from utils import update_edge\n",
+    "\n",
+    "raw_data = torch.load(\"data\\data.pt\")\n",
+    "graph_files = os.listdir(\"graphs\")\n",
+    "for file in graph_files:\n",
+    "    with open(os.path.join(\"graphs\", file), \"rb\") as f:\n",
+    "        adj = pickle.load(f)\n",
+    "    data = update_edge(raw_data, adj)\n",
+    "    result = inference_wrapper(data, \"model.pt\")\n",
+    "    print(result)"
+   ]
   }
  ],
  "metadata": {
