--- a/temp.ipynb
+++ b/temp.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -126,13 +126,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[   0,    0,    0,  ..., 2484, 2484, 2484],\n",
+      "        [   0,  575, 1722,  ..., 1353, 2483, 2484]])\n",
+      "{'train_acc': tensor(0.9857), 'val_acc': tensor(0.7920)}\n",
+      "tensor([[   0,    0,    0,  ..., 2484, 2484, 2484],\n",
+      "        [   1,    2,    3,  ..., 2481, 2482, 2483]])\n",
+      "{'train_acc': tensor(0.1429), 'val_acc': tensor(0.2780)}\n",
+      "tensor([[   0,    0,    0,  ..., 2484, 2484, 2484],\n",
+      "        [   1,    2,    3,  ..., 2481, 2482, 2483]])\n",
+      "{'train_acc': tensor(0.1429), 'val_acc': tensor(0.2780)}\n",
+      "tensor([[   0,    0,    0,  ..., 2484, 2484, 2484],\n",
+      "        [   1,    2,    3,  ..., 2481, 2482, 2483]])\n",
+      "{'train_acc': tensor(0.1429), 'val_acc': tensor(0.2780)}\n",
+      "tensor([[   0,    0,    0,  ..., 2484, 2484, 2484],\n",
+      "        [   1,    2,    3,  ..., 2481, 2482, 2483]])\n",
+      "{'train_acc': tensor(0.1429), 'val_acc': tensor(0.2780)}\n",
+      "tensor([[   0,    0,    0,  ..., 2484, 2484, 2484],\n",
+      "        [   1,    2,    3,  ..., 2481, 2482, 2483]])\n",
+      "{'train_acc': tensor(0.1429), 'val_acc': tensor(0.2780)}\n",
+      "tensor([[   0,    0,    0,  ..., 2484, 2484, 2484],\n",
+      "        [   1,    2,    3,  ..., 2481, 2482, 2483]])\n",
+      "{'train_acc': tensor(0.1429), 'val_acc': tensor(0.2780)}\n",
+      "tensor([[   0,    0,    0,  ..., 2484, 2484, 2484],\n",
+      "        [   1,    2,    3,  ..., 2481, 2482, 2483]])\n",
+      "{'train_acc': tensor(0.1429), 'val_acc': tensor(0.2780)}\n",
+      "tensor([[   0,    0,    0,  ..., 2484, 2484, 2484],\n",
+      "        [   1,    2,    3,  ..., 2481, 2482, 2483]])\n",
+      "{'train_acc': tensor(0.1429), 'val_acc': tensor(0.2780)}\n",
+      "tensor([[   0,    0,    0,  ..., 2484, 2484, 2484],\n",
+      "        [   1,    2,    3,  ..., 2481, 2482, 2483]])\n",
+      "{'train_acc': tensor(0.1429), 'val_acc': tensor(0.2780)}\n",
+      "tensor([[   0,    0,    0,  ..., 2484, 2484, 2484],\n",
+      "        [   1,    2,    3,  ..., 2481, 2482, 2483]])\n",
+      "{'train_acc': tensor(0.1429), 'val_acc': tensor(0.2780)}\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import os\n",
-    "from utils import update_edge\n",
+    "import torch\n",
+    "\n",
+    "def update_edge(data, adj_matrix):\n",
+    "    if not isinstance(adj_matrix, torch.Tensor):\n",
+    "        adj_matrix = torch.from_numpy(adj_matrix).to_sparse()\n",
+    "    edge_idx_update = adj_matrix.coalesce().indices()\n",
+    "    print(edge_idx_update)\n",
+    "    data.edge_index = edge_idx_update\n",
+    "    return data\n",
     "\n",
     "raw_data = torch.load(\"data\\data.pt\")\n",
     "graph_files = os.listdir(\"graphs\")\n",
