--- a/temp.ipynb
+++ b/temp.ipynb
@@ -175,10 +175,10 @@
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
@@ -206,7 +206,7 @@
        "2   2  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
        "3   3  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
        "4   4  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
-       "5   5  0  0  1  1  1  2  2  2  2  ...     -1     -1     -1     -1     -1   \n",
+       "5   5  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
        "\n",
        "   19871  19872  19873  19874  19875  \n",
        "0   2462   2465   2469   2471   2483  \n",
@@ -229,6 +229,42 @@
     "\n",
     "df = pd.read_csv('submission.csv')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
+       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64),\n",
+       " array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
+       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64),\n",
+       " array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
+       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64),\n",
+       " array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
+       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64),\n",
+       " array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
+       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64),\n",
+       " array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
+       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64)]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# to validate your answer\n",
+    "edge_arr = df.to_numpy()[:, 1:]\n",
+    "edge_list = []\n",
+    "for i in range(edge_arr.shape[0]):\n",
+    "    edge_list.append(edge_arr[i][edge_arr[i] != -1].reshape(2, -1))\n",
+    "edge_list"
    ]
   },
   {
