update AdaEdge and fixed known bugs.

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -151,13 +151,13 @@
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
@@ -175,13 +175,13 @@
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
@@ -205,8 +205,8 @@
        "1   1  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
        "2   2  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
        "3   3  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
-       "4   4  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
-       "5   5  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
+       "4   4  0  0  1  1  1  2  2  3  3  ...     -1     -1     -1     -1     -1   \n",
+       "5   5  0  0  1  1  1  2  2  3  3  ...     -1     -1     -1     -1     -1   \n",
        "\n",
        "   19871  19872  19873  19874  19875  \n",
        "0   2462   2465   2469   2471   2483  \n",
@@ -219,7 +219,7 @@
        "[6 rows x 19877 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,33 +227,33 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('submission.csv')\n",
+    "df = pd.read_csv('submission-7.csv')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
-       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64),\n",
-       " array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
-       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64),\n",
-       " array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
-       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64),\n",
-       " array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
-       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64),\n",
-       " array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
-       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64),\n",
-       " array([[   0,    0,    0, ..., 2472, 2473, 2484],\n",
-       "        [ 575, 1722, 2400, ..., 2469, 2471, 2483]], dtype=int64)]"
+       "[array([[   0,    0,    0, ..., 2484, 2484, 2484],\n",
+       "        [ 575, 1722, 2400, ...,  542, 1353, 2483]], dtype=int64),\n",
+       " array([[   0,    0,    0, ..., 2484, 2484, 2484],\n",
+       "        [ 575, 1722, 2400, ...,  542, 1353, 2483]], dtype=int64),\n",
+       " array([[   0,    0,    0, ..., 2484, 2484, 2484],\n",
+       "        [ 575, 1722, 2400, ...,  542, 1353, 2483]], dtype=int64),\n",
+       " array([[   0,    0,    0, ..., 2484, 2484, 2484],\n",
+       "        [ 575, 1722, 2400, ...,  542, 1353, 2483]], dtype=int64),\n",
+       " array([[   0,    0,    0, ..., 2484, 2484, 2484],\n",
+       "        [ 575, 1722, 2400, ...,  542, 1353, 2483]], dtype=int64),\n",
+       " array([[   0,    0,    0, ..., 2484, 2484, 2484],\n",
+       "        [ 575, 1722, 2400, ...,  542, 1353, 2483]], dtype=int64)]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
