--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,7 +2,238 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>...</th>\n",
+       "      <th>19866</th>\n",
+       "      <th>19867</th>\n",
+       "      <th>19868</th>\n",
+       "      <th>19869</th>\n",
+       "      <th>19870</th>\n",
+       "      <th>19871</th>\n",
+       "      <th>19872</th>\n",
+       "      <th>19873</th>\n",
+       "      <th>19874</th>\n",
+       "      <th>19875</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>163</td>\n",
+       "      <td>1413</td>\n",
+       "      <td>145</td>\n",
+       "      <td>147</td>\n",
+       "      <td>1353</td>\n",
+       "      <td>2484</td>\n",
+       "      <td>145</td>\n",
+       "      <td>542</td>\n",
+       "      <td>1353</td>\n",
+       "      <td>2483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6 rows × 19878 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  ID  0  1  2  3  4  5  6  7  ...  19866  19867  19868  19869  \\\n",
+       "0           0   0  0  0  0  1  1  1  2  2  ...    163   1413    145    147   \n",
+       "1           1   1  0  0  0  1  1  1  2  2  ...     -1     -1     -1     -1   \n",
+       "2           2   2  0  0  0  1  1  1  2  2  ...     -1     -1     -1     -1   \n",
+       "3           3   3  0  0  0  1  1  1  2  2  ...     -1     -1     -1     -1   \n",
+       "4           4   4  0  0  0  1  1  1  2  2  ...     -1     -1     -1     -1   \n",
+       "5           5   5  0  0  0  1  1  1  2  2  ...     -1     -1     -1     -1   \n",
+       "\n",
+       "   19870  19871  19872  19873  19874  19875  \n",
+       "0   1353   2484    145    542   1353   2483  \n",
+       "1     -1     -1     -1     -1     -1     -1  \n",
+       "2     -1     -1     -1     -1     -1     -1  \n",
+       "3     -1     -1     -1     -1     -1     -1  \n",
+       "4     -1     -1     -1     -1     -1     -1  \n",
+       "5     -1     -1     -1     -1     -1     -1  \n",
+       "\n",
+       "[6 rows x 19878 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('submission_topoinfeasy.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,17 +292,17 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>...</td>\n",
-       "      <td>2459</td>\n",
-       "      <td>2461</td>\n",
-       "      <td>2462</td>\n",
-       "      <td>2462</td>\n",
-       "      <td>2462</td>\n",
-       "      <td>2462</td>\n",
-       "      <td>2465</td>\n",
-       "      <td>2469</td>\n",
-       "      <td>2471</td>\n",
+       "      <td>163</td>\n",
+       "      <td>1413</td>\n",
+       "      <td>145</td>\n",
+       "      <td>147</td>\n",
+       "      <td>1353</td>\n",
+       "      <td>2484</td>\n",
+       "      <td>145</td>\n",
+       "      <td>542</td>\n",
+       "      <td>1353</td>\n",
        "      <td>2483</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -85,7 +316,7 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
@@ -109,7 +340,7 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
@@ -133,7 +364,7 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
@@ -151,12 +382,12 @@
        "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>-1</td>\n",
@@ -175,12 +406,12 @@
        "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>-1</td>\n",
@@ -201,15 +432,15 @@
       ],
       "text/plain": [
        "   ID  0  1  2  3  4  5  6  7  8  ...  19866  19867  19868  19869  19870  \\\n",
-       "0   0  0  0  0  1  1  1  2  2  2  ...   2459   2461   2462   2462   2462   \n",
-       "1   1  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
-       "2   2  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
-       "3   3  0  0  0  1  1  1  2  2  2  ...     -1     -1     -1     -1     -1   \n",
-       "4   4  0  0  1  1  1  2  2  3  3  ...     -1     -1     -1     -1     -1   \n",
-       "5   5  0  0  1  1  1  2  2  3  3  ...     -1     -1     -1     -1     -1   \n",
+       "0   0  0  0  0  1  1  1  2  2  3  ...    163   1413    145    147   1353   \n",
+       "1   1  0  0  0  1  1  1  2  2  3  ...     -1     -1     -1     -1     -1   \n",
+       "2   2  0  0  0  1  1  1  2  2  3  ...     -1     -1     -1     -1     -1   \n",
+       "3   3  0  0  0  1  1  1  2  2  3  ...     -1     -1     -1     -1     -1   \n",
+       "4   4  0  0  0  1  1  1  2  2  3  ...     -1     -1     -1     -1     -1   \n",
+       "5   5  0  0  0  1  1  1  2  2  3  ...     -1     -1     -1     -1     -1   \n",
        "\n",
        "   19871  19872  19873  19874  19875  \n",
-       "0   2462   2465   2469   2471   2483  \n",
+       "0   2484    145    542   1353   2483  \n",
        "1     -1     -1     -1     -1     -1  \n",
        "2     -1     -1     -1     -1     -1  \n",
        "3     -1     -1     -1     -1     -1  \n",
@@ -219,16 +450,14 @@
        "[6 rows x 19877 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv('submission-7.csv')\n",
-    "df"
+    "df2 = pd.read_csv('anchors/submission-1.csv')\n",
+    "df2"
    ]
   },
   {
@@ -375,7 +604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
